--- a/trunk/shareaza/Shareaza.rc
+++ b/trunk/shareaza/Shareaza.rc
@@ -125,8 +125,8 @@ IDI_ICON                ICON                    "Res\\ShareazaIcon.ico"
 //
 
 VS_VERSION_INFO VERSIONINFO
- FILEVERSION 2,0,0,16
- PRODUCTVERSION 2,0,0,16
+ FILEVERSION 2,0,0,19
+ PRODUCTVERSION 2,0,0,19
  FILEFLAGSMASK 0x3fL
 #ifdef _DEBUG
  FILEFLAGS 0x1L
@@ -144,12 +144,12 @@ BEGIN
             VALUE "Comments", "Shareaza Ultimate File Sharing"
             VALUE "CompanyName", "Shareaza Development Team"
             VALUE "FileDescription", "Shareaza Ultimate File Sharing"
-            VALUE "FileVersion", "2, 0, 0, 16"
+            VALUE "FileVersion", "2, 0, 0, 19"
             VALUE "InternalName", "Shareaza"
             VALUE "LegalCopyright", "Copyright © Shareaza Development Team, 2002-2004."
             VALUE "OriginalFilename", "Shareaza.exe"
             VALUE "ProductName", "Shareaza"
-            VALUE "ProductVersion", "2, 0, 0, 16"
+            VALUE "ProductVersion", "2, 0, 0, 19"
         END
     END
     BLOCK "VarFileInfo"
@@ -5285,6 +5285,11 @@ END
 STRINGTABLE 
 BEGIN
     IDS_GENERAL_NOURNAVAILABLE "No URN available"
+END
+
+STRINGTABLE 
+BEGIN
+    IDS_STATUS_BAR_CONNECTED_SIMPLE "Connected. %s in local library."
 END
 
 #endif    // English (Australia) resources
