--- a/trunk/shareaza/Shareaza.rc
+++ b/trunk/shareaza/Shareaza.rc
@@ -125,8 +125,8 @@ IDI_ICON                ICON                    "Res\\ShareazaIcon.ico"
 //
 
 VS_VERSION_INFO VERSIONINFO
- FILEVERSION 2,0,0,26
- PRODUCTVERSION 2,0,0,26
+ FILEVERSION 2,0,0,28
+ PRODUCTVERSION 2,0,0,28
  FILEFLAGSMASK 0x3fL
 #ifdef _DEBUG
  FILEFLAGS 0x1L
@@ -144,12 +144,12 @@ BEGIN
             VALUE "Comments", "Shareaza Ultimate File Sharing"
             VALUE "CompanyName", "Shareaza Development Team"
             VALUE "FileDescription", "Shareaza Ultimate File Sharing"
-            VALUE "FileVersion", "2, 0, 0, 26"
+            VALUE "FileVersion", "2, 0, 0, 28"
             VALUE "InternalName", "Shareaza"
             VALUE "LegalCopyright", "Copyright © Shareaza Development Team, 2002-2004."
             VALUE "OriginalFilename", "Shareaza.exe"
             VALUE "ProductName", "Shareaza"
-            VALUE "ProductVersion", "2, 0, 0, 26"
+            VALUE "ProductVersion", "2, 0, 0, 28"
         END
     END
     BLOCK "VarFileInfo"
@@ -5305,6 +5305,8 @@ END
 
 STRINGTABLE 
 BEGIN
+    IDS_STATUS_BAR_CONNECTED_HUB 
+                            "Hub mode with %lu neighbour(s).  %s in local library."
     IDS_STATUS_BAR_CONNECTED_SIMPLE "Connected. %s in local library."
 END
 
