--- a/trunk/shareaza/Shareaza.rc
+++ b/trunk/shareaza/Shareaza.rc
@@ -126,8 +126,8 @@ IDR_BITTORRENT_ICON     ICON                    "res\\Bittorrent.ico"
 //
 
 VS_VERSION_INFO VERSIONINFO
- FILEVERSION 2,1,0,6
- PRODUCTVERSION 2,1,0,6
+ FILEVERSION 2,1,0,7
+ PRODUCTVERSION 2,1,0,7
  FILEFLAGSMASK 0x3fL
 #ifdef _DEBUG
  FILEFLAGS 0x1L
@@ -145,12 +145,12 @@ BEGIN
             VALUE "Comments", "Shareaza Ultimate File Sharing"
             VALUE "CompanyName", "Shareaza Development Team"
             VALUE "FileDescription", "Shareaza Ultimate File Sharing"
-            VALUE "FileVersion", "2, 1, 0, 6"
+            VALUE "FileVersion", "2, 1, 0, 7"
             VALUE "InternalName", "Shareaza"
             VALUE "LegalCopyright", "Copyright © Shareaza Development Team, 2002-2004."
             VALUE "OriginalFilename", "Shareaza.exe"
             VALUE "ProductName", "Shareaza"
-            VALUE "ProductVersion", "2, 1, 0, 6"
+            VALUE "ProductVersion", "2, 1, 0, 7"
         END
     END
     BLOCK "VarFileInfo"
@@ -3012,10 +3012,10 @@ STYLE DS_SETFONT | WS_CHILD | WS_DISABLED | WS_CAPTION
 CAPTION "Scheduler"
 FONT 8, "Tahoma", 0, 0, 0x0
 BEGIN
-    GROUPBOX        "&Options:",IDC_STATIC,5,165,270,45
+    GROUPBOX        "&Options:",IDC_STATIC,5,157,270,53
     CONTROL         "Enable Scheduler",IDC_SCHEDULER_ENABLE,"Button",
-                    BS_AUTOCHECKBOX | WS_GROUP | WS_TABSTOP,15,176,250,15
-    GROUPBOX        "Key:",IDC_STATIC,5,112,270,52
+                    BS_AUTOCHECKBOX | WS_GROUP | WS_TABSTOP,15,168,115,15
+    GROUPBOX        "Key:",IDC_STATIC,5,100,147,52
     RTEXT           "Sun",IDC_STATIC,2,26,15,8,0,WS_EX_TRANSPARENT
     RTEXT           "Mon",IDC_STATIC,2,36,15,8
     RTEXT           "Tue",IDC_STATIC,2,46,15,8
@@ -3023,9 +3023,16 @@ BEGIN
     RTEXT           "Thu",IDC_STATIC,2,66,15,8
     RTEXT           "Fri",IDC_STATIC,2,76,15,8
     RTEXT           "Sat",IDC_STATIC,2,86,15,8
-    LTEXT           "Do not connect",IDC_STATIC,47,121,163,8
-    LTEXT           "Connect at 50% of capacity",IDC_STATIC,47,136,163,8
-    LTEXT           "Connect at full speed",IDC_STATIC,47,150,163,8
+    LTEXT           "Do not connect",IDC_STATIC,36,111,113,8
+    LTEXT           "Limited connection",IDC_STATIC,36,123,113,8
+    LTEXT           "Connect at full speed",IDC_STATIC,36,136,113,8
+    EDITTEXT        IDC_SCHEDULER_LIMITED,221,168,35,12,ES_AUTOHSCROLL | 
+                    ES_NUMBER
+    CONTROL         "",IDC_SCHEDULER_LIMITED_SPIN,"msctls_updown32",
+                    UDS_SETBUDDYINT | UDS_ALIGNRIGHT | UDS_AUTOBUDDY | 
+                    UDS_ARROWKEYS | UDS_NOTHOUSANDS,257,168,11,12
+    RTEXT           "Limited bandwidth",IDC_STATIC,135,168,82,12,
+                    SS_CENTERIMAGE
 END
 
 
